--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -1,11 +1,23 @@
 img.techstack {
     max-height:50px;
     margin-right: 20px;
+    display:inline-block;
+    margin:5px 20px;
+    padding:5px;
+
 }
 
 @media screen and (max-width: 1280px) {
     img.techstack {
         max-height:25px;
         margin-right: 10px;
+        display:inline-block;
+        margin:5px 20px;
+        padding:5px;
     }
 }
+
+.techstackcontainer{
+    text-align:center;
+}
+
